2014-07-20 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'GpioServer' class in 'common/gpio_server.cpp' and
	'common/gpio_server.h'.
	* Added code in 'syd/syd.cpp' and 'syd/syd.h' to forward GPI
	events along with RTP audio.
2014-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'Ringbuffer' class in 'common/ringbuffer.cpp' and
	'common/ringbuffer.h'.
2014-07-30 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.
2014-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Renamed the 'GpioServer::sendGpi()' method to
	'GpioServer::sendGpo()' in 'common/gpio_server.cpp' and
	'common/gpio_server.h'.
	* Renamed the 'GpioServer::gpiReceived()' signal to
	'GpioServer::gpoReceived()' in 'common/gpio_server.cpp' and
	'common/gpio_server.h'.
2014-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'GpioServer::sendGpi()' method in 'common/gpio_server.cpp'
	and 'common/gpio_server.h'.
	* Added a 'GpioServer::gpiReceived()' signal in
	 'common/gpio_server.cpp' and 'common/gpio_server.h'.
2014-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored classes in 'common' into a 'libswitchyard' library.
2014-08-01 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'make rpm' target.
	* Added a PkgConfig profile in 'Switchyard.pc.in'.
2014-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyMcastSocket' class in 'sy/symcastsocket.cpp' and
	'sy/symcastsocket.h'.
	* Refactored the 'SyGpioServer' class to use 'SyMcastSocket' in
	'sy/sygpio_server.cpp' and 'sy/sygpio_server.h'.
	* Refactored the 'SyAdvServer' class to use 'SyMcastSocket' in
	'sy/syadv_server.cpp' and 'sy/syadv_server.h'.
2014-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Refactored and simplified the callback system in the 'SyRtpServer'
	class in 'sy/syrtp_server.cpp' and 'sy/sy_rtpserver.h'.
2014-08-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRtpServer::shutdown()' method in 'sy/syrtpserver.cpp'
	and 'sy/syrtpserver.h'.